--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "gray-matter": "^4.0.2",
     "luxon": "^1.26.0",
-    "next": "10.1.3",
+    "next": "^12.0.3",
     "next-mdx-remote": "^2.1.3",
     "querystring": "^0.2.1",
     "react": "17.0.2",
