--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
     "sass": "^1.32.8"
   },
   "devDependencies": {
