--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-syntax-highlighter": "^15.4.5",
     "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.23.0",
