--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-syntax-highlighter": "^15.4.5",
+    "rehype-slug": "^5.0.1",
     "remark-mdx-code-meta": "^1.0.0",
     "sass": "^1.32.8"
   },
