--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.2",
-    "luxon": "^1.26.0",
+    "luxon": "^2.3.1",
     "next": "^12.0.3",
     "next-mdx-remote": "^3.0.8",
     "querystring": "^0.2.1",
@@ -20,6 +20,7 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
