--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-syntax-highlighter": "^15.4.5",
     "rehype-slug": "^5.0.1",
     "remark-mdx-code-meta": "^1.0.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/luxon": "^2.3.1",
