--- a/package.json
+++ b/package.json
@@ -1,44 +1,28 @@
 {
-  "name": "blog",
+  "name": "amcoff.net",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "eslint": "eslint ."
+    "lint": "next lint"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
-    "luxon": "^2.3.1",
-    "next": "^12.0.3",
-    "next-mdx-remote": "^3.0.8",
-    "querystring": "^0.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-feather": "^2.0.9",
-    "react-syntax-highlighter": "^15.4.5",
-    "rehype-slug": "^5.0.1",
-    "remark-mdx-code-meta": "^1.0.0",
-    "sass": "^1.32.8",
-    "swr": "^1.2.2"
+    "next": "14.0.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/luxon": "^2.3.1",
-    "@types/react": "^17.0.3",
-    "@types/react-syntax-highlighter": "^13.5.2",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.1",
-    "typescript": "^4.2.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
