--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 axum = "0.8.1"
 prometheus = "0.13.4"
 tokio = { version = "1.43.0", features = ["full"] }
-tower-http = { version = "0.6.2", features = ["compression-br"] }
+tower-http = { version = "0.6.2", features = ["compression-br", "set-header"] }
