--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 axum = "0.8.1"
 axum-extra = { version = "0.10.0", features = ["typed-header"] }
+mime_guess = "2.0.5"
 prometheus = "0.13.4"
+rust-embed = { version = "8.5.0", features = ["axum"] }
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["compression-br", "set-header"] }
