--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,14 @@ edition = "2021"
 [dependencies]
 axum = "0.8.1"
 axum-extra = { version = "0.10.0", features = ["typed-header"] }
+dotenvy = "0.15.7"
+futures-core = "0.3.31"
+image = { version = "0.25.5", default-features = false, features = ["png"] }
 mime_guess = "2.0.5"
 prometheus = "0.13.4"
+reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
+rspotify = { version = "0.14.0", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
 rust-embed = { version = "8.5.0", features = ["axum"] }
+snafu = "0.8.5"
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["compression-br", "set-header"] }
