--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "amcoff"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev.build-override]
+opt-level = 3 # speed up favicon generation
+
 [dependencies]
 axum = "0.8.1"
 axum-extra = { version = "0.10.0", features = ["typed-header"] }
@@ -17,3 +20,6 @@ rust-embed = { version = "8.5.0", features = ["axum"] }
 snafu = "0.8.5"
 tokio = { version = "1.43.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["compression-br", "set-header"] }
+
+[build-dependencies]
+image = { version = "0.25.5", default-features = false, features = ["ico", "jpeg"] }
